Update memento routes and admin and book page components
